feat: volume managed by docker

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -28,7 +28,7 @@ services:
     restart: always
     tty: true
     volumes: 
-      - ./mysql:/var/lib/mysql
+      - vol-db:/var/lib/mysql
     environment: 
       - MYSQL_DATABASE=nodedb
       - MYSQL_ROOT_PASSWORD=root
@@ -38,3 +38,5 @@ services:
 networks: 
   node-network:
     driver: bridge   
+volumes:
+  vol-db:
