--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -14,6 +14,8 @@ services:
     container_name: app
     entrypoint: dockerize -wait tcp://db:3306 -timeout 20s node app.js
     restart: always
+    volumes:
+      - vol-node:/root
     networks: 
       - node-network
     tty: true
@@ -39,4 +41,5 @@ networks:
   node-network:
     driver: bridge   
 volumes:
+  vol-node:
   vol-db:
